--- a/css/root.css
+++ b/css/root.css
@@ -16,7 +16,7 @@
 	--search-result-input-height: 50%;
 
 	--keywords-fontSize: 20px;
-	--keywords-main-width: 50%;
+	--keywords-main-width: 80%;
 	--keywords-main-fontSize: 30px;
 
 	--result-gsuiAudioBlock-marginSide: 5px;
